--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,6 +39,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 
     lintOptions {
         disable 'InvalidPackage'
