--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,16 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+4
+  google_sign_in: ^4.5.1
+  provider: ^3.1.0
+  flutter_spinkit: ^4.1.2
+  youtube_player_flutter: ^7.0.0+7
+  video_player: ^0.10.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  chewie: ^0.9.10
   flutter_launcher_icons: "^0.7.3"
 
 flutter_icons:
@@ -55,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/videos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
